[gd_scene load_steps=10 format=3 uid="uid://byuctw61tnfxq"]

[ext_resource type="Script" uid="uid://cmovgkechlv82" path="res://telegraph_attack_vert_large.gd" id="1_aex36"]
[ext_resource type="Texture2D" uid="uid://byp36vsh0x0uy" path="res://Art/mackerell wizard/mw_beams_telegraphs.png" id="1_ukghf"]
[ext_resource type="Texture2D" uid="uid://eedgxnlvpcki" path="res://Art/mackerell wizard/mw_beams_projectiles.png" id="3_aex36"]
[ext_resource type="Shader" uid="uid://c71no5pqu5w6y" path="res://Shaders/aura_shader.gdshader" id="5_t3m5w"]

[sub_resource type="Gradient" id="Gradient_5stx4"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_t3m5w"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lpu0w"]
width = 64
height = 64
seamless = true
seamless_blend_skirt = 0.125
color_ramp = SubResource("Gradient_5stx4")
noise = SubResource("FastNoiseLite_t3m5w")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lpu0w"]
shader = ExtResource("5_t3m5w")
shader_parameter/n = SubResource("NoiseTexture2D_lpu0w")
shader_parameter/intensity = 3.0
shader_parameter/speed = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aex36"]
size = Vector2(247, 1998)

[node name="telegraph_attack_vert" type="Sprite2D"]
z_index = 15
texture = ExtResource("3_aex36")
region_enabled = true
script = ExtResource("1_aex36")
tele = ExtResource("1_ukghf")
atk = ExtResource("3_aex36")

[node name="SpriteGroup" type="Node2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_lpu0w")

[node name="Sprite2D" type="Sprite2D" parent="SpriteGroup"]
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D2" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 168)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D3" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 335)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D4" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 500)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D5" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 663)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D6" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 831)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D7" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 998)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D8" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 1163)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D9" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 1326)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D10" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 1494)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D11" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 1661)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Sprite2D12" type="Sprite2D" parent="SpriteGroup"]
position = Vector2(0, 1826)
texture = ExtResource("1_ukghf")
region_enabled = true
region_rect = Rect2(3.90382, 373.687, 250.939, 182.57)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, 913)
shape = SubResource("RectangleShape2D_aex36")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
